syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.adia.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}